test-suite/valid/citation-minimal.glx
citations:
  citation-12345678:
    version: "1.0"
    source_id: source-abc12345
