test-suite/invalid/citation-missing-source.glx
# TEST: citation-missing-source
# EXPECT: invalid
# ERROR: "source_id is required"
# DESCRIPTION: Citation entity missing required source_id field
---
id: citation-test002
version: "1.0"




